--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -86,6 +86,7 @@ nav .phone-menu{
   overflow: hidden;
   padding: 2rem 1.5rem;
   width: 90%;
+  height: auto;
 }
 
  .headline{
@@ -107,9 +108,55 @@ nav .phone-menu{
 .info{
   display: flex;
   width: 100%;
+  height: auto;
+}
+
+.info .banner h2{
+  padding-top: 2rem;
+}
+
+.info .banner p{
+  padding-top: 1.5rem;
+  font-size: 1.25rem;
+}
+
+.info .banner span{
+  padding-top: 0.5rem;
+  color: grey;
+}
+
+.menu2 {
+  display: flex;
+  flex-direction: column;
+  width: 40%;
+  padding: 1rem 0rem;
+}
+
+.menu-item {
+  display: flex;
+  width: 100%;
+  overflow: hidden;
+  align-items: center;
+}
+
+.menu-item img {
+  width: 35%;
+  height: auto;
+  margin: 16px;
+
+}
+
+.menu-item .info-text{
+  width: 65%;
+}
+
+.info-text p {
+  padding: 8px 0px;
 }
 
 /* Start learning */
+
+
 
 /* Thesis */
 
