--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -9,6 +9,10 @@ body {
   line-height: 1.2;
 }
 
+.container{
+
+}
+
 .flex {
   display: flex;
 }
@@ -173,23 +177,34 @@ nav .phone-menu{
 
 .learn .subjects {
   display: flex;
-  padding: 2rem 4.5rem;
-  width: 100%;
+  width: 80%;
+  height: auto;
   flex-wrap: wrap;
   justify-content: space-between;
+  padding: 0rem 4.5rem 2rem 4.5rem;
+  margin: 0 auto;
 }
 
 .learn .subjects .subject{
   background-color: white;
   overflow:hidden;
-  color: grey;
+  color: black;
   width: 30%;
+  text-decoration: none;
+  margin: 1rem;
 }
 
 .subject img{
   height: auto;
 }
 
+.subject .sub-info{
+  margin: 1rem;
+}
+
+.subject .sub-info .course{
+  padding: 8px 0px;
+}
 
 /* Thesis */
 
@@ -202,11 +217,18 @@ nav .phone-menu{
 .thesis {
   display: flex;
   width: 100%;
+  height: auto;
 }
 
-.banner video{
+.thesis-banner{
+  width: 60%;
+}
+
+.thesis-banner video{
   width: 90%;
   padding: 2rem 1.5rem;
+  overflow: hidden;
+  height: auto;
 }
 
 .thesis .video-caption{
