--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -144,6 +144,7 @@ nav li{
   background-color: #FBA100;
   color: white;
   text-decoration: none;
+  text-shadow: 1px 1px 1px #1A2930;
   text-align: center;
   border-radius: 10px;
 }
@@ -199,7 +200,7 @@ nav li{
 .info .banner h2{
   padding-top: 2rem;
   color: #1A2930;
-  text-shadow: 2px 2px 1px #4A8DAC;
+  text-shadow: 1px 1px 1px #4A8DAC;
 }
 
 .info .banner p{
@@ -299,6 +300,7 @@ nav li{
 
 .learn h2 {
   color: white;
+  text-shadow: 1px 1px 1px #1A2930;
 }
 
 .learn h2{
@@ -381,6 +383,7 @@ nav li{
   width: 100%;
   text-align: center;
   padding: 2rem 0rem;
+  text-shadow: 1px 1px 2px #99CED4;
 }
 
 .thesis {
